# agent-core

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/agents/: agent_executor.py  re_act_agent.py  react_agent.py  react_agent_chat.py  stream_react_agent.py
app/llm/: openai.py
app/mcp/: factory.py  langchain_client.py  server_http.py
app/mcp/client/: langchain_client_amap.py  langchain_client_mysql.py  langchain_client_weather.py  redis.py
app/mcp/server/: server_http_weather.py
tests/: a2a_agent_card_test.py  a2a_client_test.py  pydantic_demo.py  re_act_agent_test.py  react_agent_chat_test.py  redis_client_mcp_test.py  stream_react_agent_test.py
